--- a/frontend/src/app/components/product-list/product-list.component.css
+++ b/frontend/src/app/components/product-list/product-list.component.css
@@ -238,7 +238,7 @@
 #filterOffcanvas .offcanvas-title {
     color: #254174;
     /* Title/24 */
-    font-family: "Space Grotesk";
+    font-family: var(--primary-font);
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
