add to cart, fix cart, route product-list to product detail

--- a/frontend/src/app/components/product-list/product-list.component.css
+++ b/frontend/src/app/components/product-list/product-list.component.css
@@ -323,3 +323,7 @@
     background-color: transparent;
     color: var(--Neutral-Black-16, #282828);
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
