--- a/frontend/src/app/components/product-list/product-list.component.html
+++ b/frontend/src/app/components/product-list/product-list.component.html
@@ -86,11 +86,11 @@
         <!-- product -->
         <div *ngFor="let p of products" class="col">
           <div class="product-container">
-            <div class="prd-img-container">
+            <a [routerLink]="['/product-detail', p.id]" class="prd-img-container">
               <img *ngFor="let i of images | slice:0:1" [src]="i.image" alt="">
-            </div>
+            </a>
             <div class="prd-card-inf">
-              <div class="prd-info-wrapper">
+              <div [routerLink]="['/product-detail', p.id]" class="prd-info-wrapper cursor-pointer">
                 <div class="prd-name">{{ p.name }}</div>
                 <div class="prd-category">{{ p.category_name }}</div>
               </div>
