An: giao dien payment

--- a/frontend/src/app/components/product-detail/product-detail.component.css
+++ b/frontend/src/app/components/product-detail/product-detail.component.css
@@ -308,3 +308,36 @@
   font-weight: 600;
   line-height: normal;
 }
+
+.quantity-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.quantity-container button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid #ccc;
+}
+
+.quantity-container .quantity {
+  width: 30%;
+  text-align: center;
+  color: var(--Sematic-100, #000);
+  /* Title/36 */
+  font-family: var(--primary-font);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
