--- a/frontend/src/app/components/cart-product/cart-product.component.html
+++ b/frontend/src/app/components/cart-product/cart-product.component.html
@@ -50,11 +50,11 @@
       <div class="col-lg-4 col-12">
         <div class="payment-container">
           <div class="payment-header">
-            <h5>Tổng tiền</h5>
+            <h5>Total Amount</h5>
             <p class="total-price">${{totalPrice}}</p>
           </div>
           <div class="btn-payment-container">
-            <button>THANH TOÁN</button>
+            <button [routerLink]="['/payment']">Payment</button>
           </div>
         </div>
       </div>
