--- a/frontend/src/app/components/payment/payment.component.html
+++ b/frontend/src/app/components/payment/payment.component.html
@@ -9,7 +9,7 @@
                     <div class="address customer-payment-info-item">
                         <label for="address-shipping">Shipping Address</label>
                         <div class="position-relative w-100">
-                            <textarea name="" id="address-shipping"></textarea>
+                            <input [(ngModel)]="shippingAddress" name="shippingAddress" id="address-shipping"/>
                             <div class="icon-edit-area">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
@@ -27,7 +27,7 @@
                     <div class="phone-number customer-payment-info-item">
                         <label for="phone-shipping">Phone number</label>
                         <div class="position-relative w-100">
-                            <input type="text" name="" id="phone-shipping">
+                            <input [(ngModel)]="phoneNumber" type="text" name="phoneNumber" id="phone-shipping">
                             <div class="icon-edit">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
@@ -44,7 +44,7 @@
                     </div>
                     <div class="payment-method customer-payment-info-item">
                         <label for="payment-methods-shipping">Payment methods</label>
-                        <select name="" id="payment-methods-shipping">
+                        <select [(ngModel)]="paymentMethod" name="paymentMethod" id="payment-methods-shipping">
                             <option value="cash">Cash</option>
                             <option value="cash">Paypal</option>
                         </select>
@@ -54,25 +54,32 @@
             <div class="col">
                 <div class="product-to-pay-container">
                     <div class="product-info">
-                        <div class="img-info-container">
+                        <div *ngFor="let p of products" class="img-info-container">
                             <div class="img-wrapper">
-                                <img src="assets/anh_detail_1.jpg" alt="">
+                                <img [src]="p.images[0].image" alt="">
                             </div>
                             <div class="name-cate-wrapper">
                                 <div class="w-100 d-flex flex-row align-items-center justify-content-between">
-                                    <div class="name">RICK OWENS</div>
-                                    <div class="price">$9000</div>
+                                    <div class="name">{{ p.name }}</div>
+                                    <div class="price"> ${{ (p.price * getQuantity(p.id)).toFixed(2) }}</div>
                                 </div>
-                                <div class="category">Hour JKT Black</div>
+                                <div class="category">{{ p.category_name }}</div>
+                                <div class="quantity">Quantity: {{ getQuantity(p.id) }}</div>
+                                <div class="price1">${{ p.price }}</div>
+
                             </div>
                         </div>
+
+                        
                         <div class="order-total-container">
                             <h1>ORDER TOTAL</h1>
-                            <p>$9000</p>
+                            <p>${{ totalPrice }}</p>
                         </div>
                     </div>
+
+                    
                     <div class="checkout-btn-container w-100">
-                        <button>CHECK OUT</button>
+                        <button type="button" (click)="checkout()">CHECK OUT</button>
                     </div>
                 </div>
             </div>
